tests/tlox/eval/snapshots/file_tests__eval__global_vars.lx@case1.snap
---
source: tests/eval.rs
description: "var a = 4;\nprint a;\nprint a - 6;\n\n"
expression: combined
---
:: Output ::
4
-2
