tests/tlox/eval/snapshots/file_tests__eval__if_else_stmts.lx@noscope.snap
---
source: tests/eval.rs
description: "var a = 4;\nvar b;\nif (a < 10)\n    b = 12;\nelse\n    b = \"lol\";\nprint b;\n\n"
expression: combined
---
:: Output ::
12
