tests/tlox/eval/snapshots/file_tests__eval__lits.lx.snap
---
source: tests/eval.rs
description: "print nil;\nprint true;\nprint false;\nprint 42;\nprint \"hello lol lol\";\n"
expression: combined
---
:: Output ::
nil
true
false
42
hello lol lol
