tests/tlox/eval/snapshots/file_tests__eval__print_class_names.lx.snap
---
source: tests/eval.rs
description: "class Foo {\n    bar() {\n        return \"lol\";\n    }\n}\n\nprint Foo; // \"Foo\"\n"
expression: combined
---
:: Output ::
<class Foo>
