tests/tlox/eval/snapshots/file_tests__eval__scopes.lx.snap
---
source: tests/eval.rs
description: "var a = 4;\n{\n    print a; // 4\n    var a = 6;\n    print a; // 6\n}\nprint a; // 4\n"
expression: combined
---
:: Output ::
4
6
4
