tests/tlox/eval/snapshots/file_tests__eval__shadowing.lx@block_shadowing.snap
---
source: tests/eval.rs
description: "{\n    var a = 4;\n    fun foo() {\n        print a;\n    }\n\n    foo();       // 4\n\n    var a = 6;\n    print a;     // 6\n    foo();       // 4\n}\n\n"
expression: combined
---
:: Output ::
4
6
4
